--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,59 +1,220 @@
-
+* {
+    color: #000;
+    padding: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12pt;
+    list-style: none;
+    text-decoration: none;
+}
 html, body {
     display: flex;
     flex-direction: column;
     margin: auto;
     width: 100%;
     height: 100%; 
+    background: rgb(226, 226, 228);
 }
 
 header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: auto;
+    background: rgb(2, 42, 130);
 }
 
-main.Main {
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
     flex: auto 1  0;
     margin: auto;
-    width: 50%;
+    width:100%;
     height: auto;
+    
 }
 
 footer {
     flex-shrink: 0;
+    background: rgba(2, 42, 130, .7);;
 }
 
 
-main.Main section {
+/* ===================== Cabecalho ===================== */
+
+header article#header {
+    
+    display: inline-block;
+    border: solid 1px black;
+    width: 100%;
+    margin: auto;
+    height: 62px;
+    width: 1024px;
+    padding: 10px 0px 10px 0px;
+}
+
+/* =======Logo ======= */
+
+ header article div#logo  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 62px;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    float: left;
+    background: #a00;
+    }
+
+    header article div img {
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+    } 
+
+    /* ============ Menu =========== */
+    header article div#menu {
+        display: inline-block;
+        float: right;
+        height: 100%;
+        margin: 0px;
+        border: solid 1px #a00;
+    }  
+
+
+    header article div#menu ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    /* ============ Lista do Menu =========== */
+    header article div#menu li {
+        display: inline-block; 
+        margin: 0px;
+        height: 0px;
+        list-style: none;
+        font-size: 1.1em;
+        margin-left: 30px;
+        color: #fff;
+    } 
+/* ===================== Corpo Menu ================= */
+main#main_menu {
+
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #fafafa;
-    width: auto;
-    /* text-align: center; */
+    top: 16%;
+    left: 5%;
+    width: 300px;
+    height: 400px; 
+    /* height: auto; */
+    border: solid 2px rgb(131, 130, 130);
+    border-radius: 5px;
+    
+    z-index: 5;
 }
 
-main section#AdicionarEquipamento header {
+main#main_menu article {
+    width: 100%;
+}
+main#main_menu article div {
+    width: 100%;
+    height: auto;
+}
+main#main_menu article div h3 {
+    width: 100%;
+    margin: auto;
+    background: rgb(2, 42, 130);
+    color: #fff;
+    text-align: center;
+    padding: 10px 0px;
+    box-shadow: 0px 3px 5px #000;
+}
+
+main#main_menu article ul  {
+    margin: 20px 0px 0px 10px;
+}
+
+
+main#main_menu article ul div#sub_equipamento {
+    /* display: none; */
+    margin-left: 10px;
+}
+/* ===================== Corpo ===================== */
+main section.main {
+    display: flex;
+    width: 1024px;
+    min-height: 100%;
+    /* border: solid 1px #a00; */
+}
+
+/* ============ Tabela ============ */
+
+main section table {
+    width: 100%; 
+}
+
+main section table, th, td {
+    border: solid 2px rgb(65, 63, 63);
+    border-collapse: collapse; 
+    margin-top: 20px;
+}
+
+main section table th, td {
+    height: 30px;
     text-align: center;
 }
-main.Main section#AdicionarEquipamento label {
-    display: block;
-    text-align: left;
+
+table th {
+    background: rgb(2, 42, 130);
+    color: #fff;
+    height: 30px;
+    
 }
 
-/* =================================================== */
-main section#requisitar_equipamento table {
-    width: 700px;
-    border: solid 1px #000;
-}
-main section#requisitar_equipamento table th {
-    /* border: solid 1px #000; */
-    background: #cacaca;
-    width: 350px;
+main section table td {
+
 }
 
-main section#requisitar_equipamento table td {
-    /* border: solid 1px #000; */
-    width: 350px;
+
+main section#requisitar_equipamento {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    overflow-y: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+main section.main p {
+    margin: auto;
+}
+
+
+
+/* dfghjkl;'hgfdfghjkllkjhgfd */
+
+main article {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+#sub_equipamento, #gerir_usuario {
+    display: none;
 }
