--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,6 +5,8 @@
     font-size: 12pt;
     list-style: none;
     text-decoration: none;
+    padding: 0px;
+    margin: 0px;
 }
 html, body {
     display: flex;
@@ -152,6 +154,52 @@ main section.main {
     /* border: solid 1px #a00; */
 }
 
+/* ============ LOGIN ============ */
+    main section#cont_login {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 400px;
+        height: auto;
+        box-shadow: 3px 4px 5px #000;
+        border: 1px solid #c9c9c9;
+    }
+
+    main section#cont_login h1 {
+        font-size: 2.3em;
+        text-shadow: 3px 4px #c8c8c8;
+        height: auto;
+        margin-top: 20px;
+    }
+
+    main section#cont_login form {
+        width: 80%;
+        padding: 30px 0px;
+    }
+    main section#cont_login label {
+        font-size: 1.3em;
+        
+    }
+
+    main section#cont_login input {
+        width: 100%;
+        height: 30px;
+        margin: 10px 0px;
+    }
+
+    main section#cont_login input[type="password"], [type="email"] {
+        
+    }
+    main section#cont_login input[type="submit"] {
+        margin-top: 20px;
+        height: 40px;
+    }
+
 /* ============ Tabela ============ */
 
 main section table {
@@ -189,10 +237,40 @@ main section#requisitar_equipamento {
 }
 
 
+/* ============ ADD Equipamento ============ */
 
+section div#cont_ADD_Equipa {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    border: solid;
 
+}
+main section div#logo {
+    width: 80px;
+    height: 80px;
+    margin-top: 50px;
+    border-radius: 50px 50px 50px 50px;
+    
+}
+main section div img {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+} 
 
+section div form#ADD_Equipa {
+    width: 75%;
+    margin-left: 12.5%;
+}
 
+section div form#ADD_Equipa input, select {
+    width: 100%;
+}
 
 
 
